--- a/shop_games/shop_games/templates/shop_games/base.html
+++ b/shop_games/shop_games/templates/shop_games/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>{% block title %}{{title|title}}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'shop_games/style.css' %}" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +16,8 @@
     {% endblock %}
 
     <script src="{% static 'basketapp/js/script.js' %}"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
         window.onload = function () {
             document.body.classList.add('loaded_hiding');
@@ -28,7 +30,7 @@
 
     {% block js %}
     {% endblock %}
-    <title>{% block title %}{{title|title}}{% endblock %}</title>
+
 </head>
 
 <body>
